titulo manifest inicio

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "AgendiTa App",
-  "name": "guardatus contactos",
+  "name": "guardá tus contactos",
   "icons": [
     {
       "src": "favicon.ico",
